--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "debounce": "^1.2.1",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "~49.0.8",
+    "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.4",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-config": "^0.78.1"
   },
   "private": true
 }
